--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env:
+          TURBO_TOKEN: zt4P04r0WPxAl5RB0vpwh58w
+          TURBO_TEAMgit add .: rocketseat-rhaniel
 
       - name: Deploy storybook
         working-directory: ./packages/docs
